# agentfield-vireo

./: .editorconfig  .gitignore  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  VERSION  cloudbuild.yaml
.github/: BRANCH_PROTECTION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: control-plane.yml  docker.yml  functional-tests.yml  memory-metrics.yml  release.yml  sdk-go.yml  sdk-python.yml
control-plane/: .env.dev  .env.example  NEXT_TEST_PRIORITIES.md  README.md  build-single-binary.sh  go.mod
control-plane/config/: docker-perf.yaml  haxen.yaml
control-plane/migrations/: 000_migration_runner.sql  008_fix_haxen_server_id_schema.sql  README.md
control-plane/scripts/: README.md  quick-mcp-test.sh  release.sh  test-mcp-endpoints.sh  version-manager.sh
deployments/docker/: Dockerfile.control-plane  Dockerfile.go-agent  README.md  (+2 more)
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  RELEASING.md
sdk/python/: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
sdk/python/agentfield/: __init__.py  agent.py  async_execution_manager.py  client.py  memory.py  pydantic_utils.py
sdk/python/haxen_sdk/: README_stdio_bridge.md  agent.py  agent_ai.py  agent_haxen.py  agent_mcp.py  agent_server.py  agent_workflow.py  async_config.py  async_execution_manager.py  client.py  connection_manager.py  decorators.py  did_manager.py  dynamic_skills.py  execution_context.py  http_connection_manager.py  logger.py  mcp_client.py  mcp_stdio_bridge.py  memory.py  memory_events.py  multimodal_response.py  pydantic_utils.py  rate_limiter.py  status.py  types.py  vc_generator.py
sdk/python/tests/: conftest.py  helpers.py  test_agent_ai.py  test_agent_call.py  test_agent_core.py  test_agent_haxen.py  test_agent_helpers.py  test_agent_integration.py  test_agent_networking.py  test_agent_registry.py  test_agent_server.py  test_agent_utils.py  test_agent_workflow.py  test_agent_workflow_registration.py  test_ai_config.py  test_async_config.py  test_async_execution_manager_paths.py  test_client.py  test_client_auth.py  test_client_lifecycle.py  test_client_unit.py  test_connection_manager.py  test_decorators.py  test_did_manager.py  test_dynamic_skills.py  test_execution_context_core.py  test_execution_state.py  test_memory_client_core.py  test_memory_events.py  test_memory_flow_core.py  test_multimodal.py  test_multimodal_response.py  test_pydantic_utils.py  test_rate_limiter_core.py  test_result_cache.py  test_router.py  test_status_utils.py  test_types.py  test_utils.py  test_vc_generator.py
sdk/python/tests/integration/: conftest.py  test_haxen_end_to_end.py
(+239 files in other folders)
